# Rust-Mikan

./: OVMF_VARS.fd  README.md  make_image.py  run_qemu.py
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: arg.rs  elf.rs  lib.rs  main.rs  vga.rs
kernel/: Cargo.toml  x86_64.json
kernel/.cargo/: config.toml
kernel/src/: arg.rs  console.rs  font.rs  graphic.rs  lib.rs  main.rs  pci.rs
uefi/: Cargo.toml
uefi/src/: main.rs
