[package]
name = "uefi"
version = "0.1.0"
authors = ["callus-corn <mtfm_ymzk@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { git = "https://github.com/rust-osdev/uefi-rs.git", features=["exts", "alloc"] }
